--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ spark_env
 NMDLL - Lab 3.pdf
 /dataset/creditcard.csv
 /dataset/nyc-taxi-trip-duration
+/src/Classification/MLlib_RDD_Based/Result/predictions.parquet
